# ImageDB-MVP

./: .gitignore  .prettierignore  AGENTS.md  CURRENT_TASK.md  ENVIRONMENT.md  PROJECT_PLAN.md  README.md  package-exe.cmd  package-exe.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_indexes.sql  0003_commit_indexes.sql  0004_match_indexes.sql  0005_import_plans.sql  0006_idempotency.sql  0007_transaction_links.sql  0008_source_album_snapshots.sql  0009_drop_redundant_snapshot_hash.sql  0010_library_root_leases.sql  0011_album_workflow_state.sql  0012_album_workflow_repair.sql  0013_workflow_escape_and_candidate_uniqueness.sql  0014_candidate_review_semantics_and_abandoned_filters.sql  0015_fingerprint_v2.sql  0016_group_review_large_image_move_import.sql  0017_source_cleanup_quarantine.sql  0018_import_plan_draft_inclusion.sql
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: commit.rs  database.rs  diagnostics.rs  library.rs  mod.rs  probe.rs  recovery.rs  review.rs  scan.rs  settings_cmd.rs  workflow.rs
apps/desktop/src-tauri/src/domain/: duplicate_group.rs  import_state.rs  mod.rs  state_machine.rs
apps/desktop/src-tauri/src/infrastructure/: file_transaction.rs  image_fingerprint.rs  image_fingerprint_v2.rs  library_fingerprint_index.rs  logging.rs  mod.rs  postgres.rs  secrets.rs  settings.rs  single_instance.rs  storage_capabilities.rs
apps/desktop/src-tauri/src/infrastructure/postgres/: external.rs  manager.rs  migration.rs  mod.rs  operation_lock.rs
apps/desktop/src-tauri/src/repositories/: import_repository.rs  mod.rs
apps/desktop/src-tauri/src/services/: commit_service.rs  database_service.rs  diagnostics_service.rs  library_service.rs  mod.rs  recovery_service.rs  review_service.rs  scan_service.rs  source_snapshot_service.rs  workflow_service.rs
apps/desktop/src-tauri/src/tests/: cancellation_recovery_integration.rs  fail_injection.rs  fail_injection_tests.rs  m9_diagnostics_integration.rs  m9_main_chain_integration.rs  m9_performance_integration.rs  m9_public_recovery_integration.rs  manifest_validation_integration.rs  mod.rs  plan_contract_integration.rs  protocol_integration.rs  reconcile_integration.rs
checklists/: M6.5_DOD.md  M7_DOD.md  M8_DOD.md  M9_DOD.md  RELEASE_DOD.md
docs/: ARCHITECTURE.md  DATABASE.md  FILE_TRANSACTION.md  IMAGE_MATCHING.md  ImageDB-MVP_Core_Fix&M5_M6_Refactor.md  TESTING.md  acceptance-matrix.md  runtime-layout.md  storage-capability-contract.md
reports/: README.md  core-fix-M5-M6-final.md  core-fix-M5-M6-round2-final.md  core-fix-M5-M6-round3-final.md  m6_5_m9_closure.md  (+16 more)
(+153 files in other folders)
