[package]
name = "imagedb-desktop"
version = "0.1.0"
description = "ImageDB desktop application"
authors = ["ImageDB contributors"]
edition = "2021"

[lib]
name = "imagedb_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
image = { version = "0.25", default-features = true }
blake3 = "1"
tokio-postgres = "0.7"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
