[package]
name = "imagedb-desktop"
version = "0.1.0"
description = "ImageDB desktop application"
authors = ["ImageDB contributors"]
edition = "2021"

[lib]
name = "imagedb_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
real-db-tests = []
fail-injection = []
bundled-runtime-required = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
image = { version = "0.25", default-features = true }
blake3 = "1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
keyring = "4.1.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
rand = "0.8"
rfd = "0.15"
base64 = "0.22"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
